--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "yargs": "13.2"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
+    "chai": "^4.0.0-canary.2",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^9.0.3"
   }
 }
