--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "chai": "^4.0.0-canary.2",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^9.0.3"
+    "mocha": "^9.0.3",
+    "sinon": "^4.1.1"
   }
 }
